tests/fail/implicit_deref_err.stderr
error[E0406]: Type mismatch for argument 1: expected str, got string
 --> tests/fail/implicit_deref_err.tk:9:17
   |
 9 |     expect_view(path)
   |                 ^
